# Raven

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICES.md  README.md  README.zh-CN.md  SECURITY.md  eslint.base.mjs  install.ps1  package-lock.json  package.json  prettier.config.mjs  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: commits.yml
benchmarks/clawbench/: stream.py
benchmarks/pinchbench/bot_runner/: benchmark.py  bot_executor.py  grading.py
benchmarks/pinchbench/direct/: benchmark.py  grading.py  raven_executor.py
benchmarks/pinchbench/tasks/: task_00_sanity.md
benchmarks/proactivity_eval/: README.md
benchmarks/proactivity_eval/runners/: generate_longrun_fixtures.py  longrun_scorecard.py  pa_scorecard.py  prompts_loader.py  retry_failed.py  run.py
benchmarks/skill_evals/: run_eval.py
benchmarks/skill_evals/fixtures/: build_mock_library.py
bridge/: eslint.config.js  package-lock.json  package.json
bridge/src/: index.ts  server.ts  types.d.ts  whatsapp.ts
docs/: everos-memory-e2e-test-plan.md
raven/agent/context/: builder.py
raven/agent/hook/: adapters.py  base.py  composite.py
raven/agent/loop/: checkpoint.py  main.py  recovery.py
raven/agent/personalizer/: personalizer.py
raven/agent/subagent/: manager.py
raven/agent/tools/: ask_user.py  base.py  file_search.py  filesystem.py  mcp.py  media_gen.py  message.py  shell.py  skill_hub.py  tool_index.py  tool_search.py  web.py
raven/auth/: allowlist.py  capability_token.py
raven/channels/: base.py  contract.py  intake.py  manager.py  outlet.py
raven/cli/: _cron_handler.py  _gateway_lock.py  _gateway_spine.py  _helpers.py  _hooks_stack.py  _log_file.py  _plugin_stack.py  _proactive_stack.py  _repl_slash.py  _repl_spine.py  _styles.py  agent_commands.py  channel_commands.py  cron_commands.py  doctor_commands.py  gateway_commands.py  onboard_commands.py  plugin_commands.py  provider_commands.py  sandbox_commands.py  sentinel_commands.py  session_commands.py  status_commands.py  tui_commands.py
raven/config/: __init__.py  loader.py  raven.py  schema.py  update.py  update_channels.py  update_everos.py  update_providers.py
raven/context_engine/: assembler.py  curator.py  factory.py  history_trimmer.py
raven/context_engine/segments/: curator.py  memory.py  render.py  skills.py
raven/eval_engine/: config.py  engine.py
raven/eval_engine/adapter/: adapter.py
raven/eval_engine/hooks/: after_iteration_hook.py  before_iteration_hook.py  tool_audit_hook.py
raven/eval_engine/judge/: judge.py
raven/memory_engine/: __init__.py  backend.py  base.py  contract_test.py
raven/memory_engine/consolidate/: behaviors.py  behaviors_extractor.py  consolidator.py
raven/memory_engine/skill_forge/: catalog.py  everos_source.py  fusion.py  gate.py  hub_source.py  refs.py  router.py
raven/memory_engine/skill_local/: local_pool.py  registry.py  watcher.py
raven/plugin/: discover.py  manifest.py  registry.py
raven/proactive_engine/: system_events.py
raven/providers/: azure_openai_provider.py  base.py  common_models.py  custom_provider.py  litellm_provider.py  openai_codex_provider.py  registry.py  transcription.py
raven/routing/: cache.py  classifier.py  embedding_data.json  generate_embeddings.py  profiles.py  router.py  selector.py  snapshot.json  types.py
raven/sandbox/: __init__.py  _async_utils.py  _runtime.py  boxlite_executor.py  config.py  debug_server.py  direct_executor.py  interfaces.py
raven/security/: trust.py
raven/session/: export.py  manager.py
raven/skill_hub/: client.py
raven/spine/: delivery.py  scheduler.py
raven/templates/: HEARTBEAT.md  SOUL.md  USER.md
raven/token_wise/: EXPERIMENT_REPORT.md  EXPERIMENT_REPORT_HERMES_VS_RAVEN.md  EXPERIMENT_REPORT_WORKLOADS.md  cache_optimizer.py  registry.py  system_and_tail_cache.py  usage_tracker.py
raven/tui_rpc/: _confirm_injection.py  dispatcher.py  models.py  question_broker.py  server.py  spine.py  subscriptions.py
raven/utils/: bm25.py  helpers.py
scripts/: boxlite_cli.py  check_commit_file.py  check_commit_messages.py  check_large_files.py  check_pr_body.py  commit_lint.py  everos_memory_roundtrip.py  everos_skill_extract.py  skill_forge_full_e2e.py  skill_forge_retrieval_eval.py  skill_hub_e2e.py
tests/: test_action_executor.py  test_action_executor_tool_spawn.py  test_ag1_backend_dispatch.py  test_agent_hook_adapters.py  test_agent_hook_contract.py  test_agent_loop_context_overflow.py  test_agent_loop_empty_recovery.py  test_agent_loop_everos_pipeline.py  test_agent_loop_injected_skill_ids.py  test_agent_loop_max_iter_synthesis.py  test_agent_loop_response_modifier.py  test_agent_loop_run_emit.py  test_agent_loop_session_stamps.py  test_agent_loop_stream.py  test_agent_loop_tool_loop_break.py  test_agent_loop_tool_search.py  test_agent_loop_usage_sink.py  test_atomic_io.py  test_attention_writers.py  test_auth_allowlist.py  test_behaviors_extractor.py  test_bm25.py  test_channels_base.py  test_channels_contract.py  test_channels_dingtalk.py  test_channels_discord.py  test_channels_email.py  test_channels_errors.py  test_channels_feishu.py  test_channels_intake.py  test_channels_manager.py  test_channels_matrix.py  test_channels_mochat.py  test_channels_qq.py  test_channels_registry.py  test_channels_slack.py  test_channels_telegram.py  test_channels_wecom.py  test_channels_weixin.py  test_channels_whatsapp.py  (+182 more)
tests/integration/: conftest.py  test_everos_backend_e2e.py  test_everos_channel_e2e.py  test_everos_extraction_real_llm.py  test_everos_skill_evolution_e2e.py  test_fallback_chain_smoke.py  test_skill_hub_tools_e2e.py  test_tui_cancel_inflight_e2e.py  test_tui_rpc_demo_smoke.py
ui-tui/: .prettierignore  eslint.config.js  package-lock.json  package.json
ui-tui/rpc-schema/: openrpc.json
ui-tui/src/: app.tsx  banner.ts  entry.tsx  gatewayClientCompat.ts  gatewayClientStub.ts  gatewayTypes.ts  theme.ts
(+210 files in other folders)
