[project]
name = "raven"
version = "0.1.2"
description = "Raven — AI-native command line agent with memory, proactivity, context control, and skill evolution"
requires-python = ">=3.12"
license =  "Apache-2.0"
license-files = ["LICENSE", "LICENSES/*.txt", "NOTICES.md"]
authors = [
    {name = "EverMind"}
]
keywords = ["ai", "agent", "cli", "terminal", "context-management", "skill-evolution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "litellm>=1.82.1,<2.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.14.2,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "croniter>=6.0.0,<7.0.0",
    "pyyaml>=6.0",
    "prompt-toolkit>=3.0.0",
    "json-repair>=0.30.0",
    # everos token-aware truncation (text.py). Currently also a
    # transitive dep of litellm — pinning it directly so the everos
    # extractor keeps working if upstream ever drops it.
    "tiktoken>=0.7.0,<1.0.0",
    "questionary>=2.0.0,<3.0.0",
    "watchfiles>=0.21,<2.0",
    "everos[multimodal]==1.0.1",
    "tomli-w>=1.2.0",
    # OAuth provider login (Codex / GitHub Copilot) imports this during onboard,
    # so it must be a runtime dep -- otherwise `uv tool install raven` users hit
    # "oauth_cli_kit not installed" the moment they pick an OAuth provider.
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "portalocker>=3.2.0",
    "mcp>=1.27.0",
]

[project.optional-dependencies]
channel-telegram = [
    "python-telegram-bot[socks]>=22.6,<23.0",
    "socksio>=1.0.0,<2.0.0",
    "python-socks[asyncio]>=2.8.0,<3.0.0; sys_platform != 'win32'",
]
channel-slack = [
    "slack-sdk>=3.39.0,<4.0.0",
    "slackify-markdown>=0.2.0,<1.0.0",
]
channel-discord = ["websockets>=16.0,<17.0"]
channel-whatsapp = []
channel-matrix = [
    "matrix-nio>=0.25.2; sys_platform != 'win32'",
    "mistune>=3.0.0,<4.0.0",
    "nh3>=0.2.17,<1.0.0",
]
channel-feishu = ["lark-oapi>=1.5.0,<2.0.0"]
channel-wecom = ["wecom-aibot-sdk-python>=0.1.5"]
channel-mochat = [
    "python-socketio>=5.16.3,<6.0.0",
    "msgpack>=1.2.1,<2.0.0",
    "websocket-client>=1.9.0,<2.0.0",
]
channel-qq = ["qq-botpy>=1.2.0,<2.0.0"]
channel-dingtalk = ["dingtalk-stream>=0.24.0,<1.0.0"]
channel-email = []
channel-weixin = [
    "qrcode[pil]>=8.0",
    "pycryptodome>=3.20.0",
]
channels = [
    "raven[channel-telegram]",
    "raven[channel-slack]",
    "raven[channel-discord]",
    "raven[channel-whatsapp]",
    "raven[channel-matrix]",
    "raven[channel-feishu]",
    "raven[channel-wecom]",
    "raven[channel-mochat]",
    "raven[channel-qq]",
    "raven[channel-dingtalk]",
    "raven[channel-email]",
    "raven[channel-weixin]",
]
tools = [
    "readability-lxml>=0.8.4,<1.0.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
]
retrieval = [
    "torch>=2.0.0",
    "transformers>=4.45.0",
]
sandbox = [
    "boxlite==0.9.5",
    "anyio>=4.0",
]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]
eval = [
    # benchmarks/proactivity_eval PROBE adapter (deprioritized stretch test) needs
    # this to pull the PROBE dataset. Keep out of main deps so production installs
    # stay lean.
    "huggingface-hub>=1.11.0",
]

[project.scripts]
raven = "raven.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["raven"]

[tool.hatch.build.targets.wheel.force-include]
"bridge" = "raven/bridge"

# The prebuilt, self-contained TUI bundle (ui-tui/dist/entry.js) is packaged
# into the wheel as raven/ui-tui/dist so `pip`/`uv tool install` yields a
# working `raven tui` with no source checkout. It is added *conditionally* by
# the custom build hook below (hatch_build.py) — a static force-include would
# hard-fail when dist/ is absent (it's gitignored), breaking `git clone && uv
# sync`. CI builds the bundle before building the release wheel
# (see .github/workflows/release.yml).
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build]
include = [
    "raven/**/*.py",
    "raven/plugin/**/raven-plugin.toml",
    "raven/templates/**/*.md",
    "raven/skills/**/*.md",
    "raven/skills/**/*.sh",
]

[tool.hatch.build.targets.sdist]
include = [
    "raven/",
    "bridge/",
    "hatch_build.py",
    "README.md",
    "LICENSE",
]

[tool.uv]
constraint-dependencies = [
    "aiohttp>=3.13.4",
    "pip>=26.1.2",
    "pyjwt>=2.13.0",
    "python-engineio>=4.13.3",
    "python-dotenv>=1.2.2",
    "starlette>=1.3.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["benchmarks/**/data", "benchmarks/**/results", "benchmarks/**/output"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "S101", "S105", "S106", "S107", "S506", "S605", "S607"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Test conventions: asserts, hardcoded creds in fixtures, naming, redefinition,
# unused variables, deferred imports, ambiguous names — idiomatic in tests, not
# product code. (Auto-fixable churn E702/F401/I001 is left for the reformat branch.)
"tests/**" = ["E402", "E741", "F811", "F841", "N802", "N805", "N806", "N817", "N818", "S101", "S105", "S106", "S107", "S607"]

# CLI startup-order / deferred imports, accepted long-term.
"raven/cli/commands.py" = ["E402"]
"raven/cli/cron_commands.py" = ["E402"]
"raven/cli/sentinel_commands.py" = ["E402"]

# Other deferred / startup-order imports, accepted.
"benchmarks/skill_evals/fixtures/build_mock_library.py" = ["E402"]
"raven/eval_engine/engine.py" = ["E402"]
"raven/memory_engine/skill_local/registry.py" = ["E402"]
"scripts/skill_forge_full_e2e.py" = ["E402"]

# asserts; convert-vs-keep tracked in v2.
"raven/agent/subagent/manager.py" = ["S101"]
"raven/channels/adapters/discord/channel.py" = ["S101"]
"raven/channels/adapters/weixin/channel.py" = ["S101"]
"raven/cli/doctor_commands.py" = ["S101"]
"raven/cli/onboard_commands.py" = ["S101"]
"raven/memory_engine/contract_test.py" = ["S101"]
"raven/proactive_engine/sentinel/executor/action_executor.py" = ["S101"]
"raven/proactive_engine/sentinel/executor/defer_manager.py" = ["S101"]
"raven/proactive_engine/sentinel/predictor/task_discoverer.py" = ["S101"]

# scripts/: dev utilities; partial-path subprocess, asserts.
"scripts/check_commit_file.py" = ["S607"]
"scripts/check_commit_messages.py" = ["S607"]
"scripts/check_large_files.py" = ["S607"]
"scripts/skill_hub_e2e.py" = ["S101"]

# benchmarks/: eval harness; naming, ambiguous names, unused vars,
# partial-path subprocess.
"benchmarks/clawbench/stream.py" = ["S607"]
"benchmarks/proactivity_eval/runners/_common/drivers/longrun.py" = ["F841"]
"benchmarks/proactivity_eval/runners/_common/drivers/pbench.py" = ["E741", "N806"]
"benchmarks/proactivity_eval/runners/_common/longrun_adapters.py" = ["N814", "S607"]
"benchmarks/proactivity_eval/runners/_common/openclaw.py" = ["S607"]
"benchmarks/proactivity_eval/runners/longrun_scorecard.py" = ["F841"]
"benchmarks/proactivity_eval/runners/pa_scorecard.py" = ["N806"]
"benchmarks/proactivity_eval/runners/synthesizers/keyword.py" = ["E741"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "real_llm: hits a real everos runtime (LLM + embedding); skipped unless EVEROS_LLM__API_KEY / EVEROS_EMBEDDING__MODEL are configured",
    "llm_judge: uses an LLM as a grader for extraction quality (extra cost / non-determinism); opt-in",
]

[dependency-groups]
dev = [
    "json-repair>=0.59.5",
    "oauth-cli-kit>=0.1.3",
    "pexpect>=4.9",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "pyte>=0.8",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11,<0.16",
]
